<resources>

    <string name="app_name">Qareapp</string>
    <string name="Login">Login</string>
    <string name="User_Name">Usuario o Correo Electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Contraseña2">Repetir Contraseña</string>
    <string name="Registro">Registrarse</string>
    <string name="Correo">Correo </string>
    <string name="Example">example@gmail.com</string>
    <string name="Aceptar">Aceptar</string>
    <string name="MIPerfil">Mi Perfil</string>
    <string name="cerrar">Cerra Sesion</string>
    <string name="Principal">Principal</string>
    <string name="informacion">Nombre;  Q\'Areapp</string>
    <string name="nombre">Q\'Areapp</string>
    <string name="descripcion">Decripcion

                               </string>
    <string name="Usuario">Usuario:</string>
    <string name="facebook_app_id">1647593145293882</string>
    <string name="fb_login_protocol_scheme">fb1647593145293882</string>
    <string name="Nombre">Nombre</string>
    <string name="Telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="Cedula">Cedula</string>
    <string name="Direccion">Direccion</string>
    <string name="Negocio">Negocio</string>
    <string name="Observacion">Observacion</string>
    <string name="Cliente">Cliente</string>
    <string name="title_activity_principal">Clientes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_prueba3">prueba3Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Cuenta">¿No tienes Cuenta?</string>
    <string name="Clientes">Clientes</string>
    <string name="title_activity_maps">Map</string>
    <string name="Nuevo_Cliente">Nuevo Cliente</string>
    <string name="Acceder">Acceder con</string>
    <string name="title_activity_productos">Productos</string>
    <string name="Nuevo_Producto">Nuevo Producto</string>
    <string name="Precio">Precio</string>
    <string name="Productos">Productos</string>
    <string name="title_activity_produccion">Produccion</string>
    <string name="title_activity_factura">Factura</string>
    <string name="title_activity_ventas">Ventas</string>
    <string name="title_activity_compras">Compras</string>
    <string name="Reporte_Diario">Reporte Diario</string>
    <string name="Reporte_Mensual">Reporte Mensual</string>
    <string name="Reporte_Anual">Reporte Anual</string>
    <string name="Venta_Nueva">Venta Nueva</string>
    <string name="Historial_venta">Historial de Ventas</string>
    <string name="Factura">Generar Factura</string>
    <string name="Fiados">Fiados</string>
    <string name="Inventario">Inventario</string>
    <string name="Gastos">Gastos</string>
    <string name="compras">Compras</string>

</resources>
