<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.danielescobar.qareapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/Bienvenido"
            android:textColor="@color/green"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/maiz" />

        <EditText
            android:id="@+id/eCorreoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/User_Name"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20dp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/eContraseñaP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:background="@color/green"
            android:onClick="onButtonClicked"
            android:text="@string/Ingresar"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/Acceder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnSignInGoogle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginLeft="107dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnSignInFacebook"

                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"

                    android:layout_marginLeft="45dp"

                    android:gravity="center_horizontal" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/Cuenta" />

            <Button
                android:id="@+id/bRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onButtonClicked"
                android:text="@string/Registro"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
