<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:orientation="vertical"
    tools:context="com.danielescobar.qareapp.PerfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nombre"
        android:textColor="@color/khaki"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/usuario" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/khaki"
            android:text="@string/Usuario"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/eUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/khaki"
            android:textColorHint="@color/khaki"
            android:textSize="20dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/khaki"
            android:text="@string/Contraseña"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/eContraseña_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:textColor="@color/khaki"
            android:textSize="25dp" />
    </LinearLayout>
</LinearLayout>