<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielescobar.qareapp.VentasActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_ventas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.9"
                    android:onClick="onButtonClickedVenta_Nueva"
                    android:background="@drawable/venta_nueva" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Venta_Nueva"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:onClick="onButtonClickedHistorial_venta"
                    android:layout_weight="0.9"
                    android:background="@drawable/historialventas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Historial_venta"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:onClick="onButtonClickedGenerar_factura"
                    android:layout_weight="0.9"
                    android:background="@drawable/factura_venta" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:text="@string/Factura"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.9"
                    android:background="@drawable/deuda"
                    android:onClick="onButtonClickedFiado"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Fiados"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
